#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
MD-2009-06-15-0: CVS:           Created V62u3_TAG
-----------------------------------------------------

DG-2009-06-09-0: Enhancem.:  added qmod test procedure
                 Review:     SH

CR-2009-06-04-0: Bugfix:     initalize major_release variable to "0" in 
                             get_version_info() 
                 Review:     SH

RH-2009-06-04-0: Bugfix:     wait_for_enter in MaxPendingJobsSLO test deleted
                 Review:     AF

RM-2009-06-04-0: Enhancem.:  Fix of test issue_554. Test now waits for 
                             ASSIGNED state of all resources to be freed if a
                             service is stopped
                 Review:     AF

AP-2009-06-03-0: Bugfix:     create_gnuplot_xy_gif() - using primarily localhost
                 Belongs to: AP-2009-06-01-0
                 Review:     CR
                 Bugfix:     smf test fails when no BDB server host or no ARCO is
                             configured - should return unsupported
                 Belongs to: CR-2008-11-19-1
                 Issue:      286
                 Review:     JF

RM-2009-06-01-0: Enhancem.:  support for hedeby "simple" installation, adjustment 
                             of all hedeby tests to this changes
                 Review:     TB

AP-2009-06-01-0: Bugfix:     fix of broken tests (bigdecimal, path_alias, 2876)
                 Belongs to: AP-2009-05-21-0
                 Review:     JF

CR-2009-05-29-1: Enhancem.:  appcert test now adds information of used host
                 Review:     DG
