@@ -6,7 +6,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
-MD-2009-06-15-0: CVS:           Created V62u3_TAG
+JG-2009-06-17-0: Enhancem.:  new test case for IZ 3053 in the qconf test:
+                             deleting manager or operator must be rejected for
+                             the user root and the admin user 
+
+MD-2009-06-15-0: CVS:        Created V62u3_TAG
 -----------------------------------------------------
 
 DG-2009-06-09-0: Enhancem.:  added qmod test procedure
